# walkscore-proxy

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
deploy/: cf.json  deploy.sh
script/: stations.py
server/: app.py  cloudformation.json  lambda_function.py
server/.chalice/: config.json
server/chalicelib/: stations.json
