[tool.poetry]
name = "walkscore-proxy"
version = "1.0.0"
description = "Proxy calls to Walkscore® API to hide API key and cache results"
authors = ["TransitMatters Labs Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
requests = "2.31.0"
boto3 = "^1.34.76"
datadog_lambda = "5.92.0"
ddtrace = "2.7.6"

[tool.poetry.dev-dependencies]
pip = ">=23.2"
chalice = "1.31.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"